--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -252,6 +252,8 @@
         display: flex;
         align-items: center;
         img {
+          border-radius: 50%;
+          box-shadow: 0 0 10px #ccc;
           width: 120px;
           height: 120px;
         }
